# DSS-Checker

./: .gitignore  CMakeLists.txt  README.md
Formulas/ERK/: ERK10.pn  ERK100.pn
Formulas/ERK/Module1/: ERK1.ltl  ERK10.ltl  ERK2.ltl  ERK3.ltl  ERK4.ltl  ERK5.ltl  ERK6.ltl  ERK7.ltl  ERK8.ltl  ERK9.ltl  erk_all.ltl
Formulas/ERK/Module2/: ERK11.ltl  ERK12.ltl  ERK13.ltl  ERK14.ltl  ERK15.ltl  ERK16.ltl  ERK17.ltl  ERK18.ltl  ERK19.ltl
Formulas/ERK/Module3/: ERK20.ltl  ERK21.ltl  ERK22.ltl  ERK23.ltl  ERK24.ltl  ERK25.ltl  ERK26.ltl  ERK27.ltl  ERK28.ltl
Formulas/Philo/Philo10/Module1/: philo10-1.ltl  philo10-3.ltl  philo10-4.ltl
Formulas/Philo/Philo10/Module2/: philo10-10.ltl  philo10-6.ltl  philo10-7.ltl  philo10-8.ltl  philo10-9.ltl
Formulas/Philo/Philo10/Module3/: philo10-11.ltl  philo10-12.ltl  philo10-13.ltl  philo10-14.ltl  philo10-15.ltl
Formulas/Philo/Philo10/Module4/: philo10-16.ltl  philo10-17.ltl  philo10-18.ltl  philo10-19.ltl  philo10-20.ltl
Formulas/Philo/Philo10/Module5/: philo10-21.ltl  philo10-22.ltl  philo10-23.ltl  philo10-24.ltl  philo10-25.ltl
Formulas/Philo/Philo3/Module1/: philo3-1.ltl
Formulas/Philo/Philo5/Module1/: all_philo.ltl  philo5v1-1.ltl  philo5v1-10.ltl  philo5v1-2.ltl  philo5v1-3.ltl  philo5v1-4.ltl  philo5v1-5.ltl  philo5v1-6.ltl  philo5v1-7.ltl  philo5v1-8.ltl  philo5v1-9.ltl  script.sh
Formulas/Philo/Philo5/Module2/: philo5v1-11.ltl  philo5v1-12.ltl  philo5v1-13.ltl  philo5v1-14.ltl  philo5v1-15.ltl  philo5v1-16.ltl  philo5v1-17.ltl  philo5v1-18.ltl  philo5v1-19.ltl  philo5v1-20.ltl
Formulas/Philo/Philo5/Module3/: philo5v1-21.ltl  philo5v1-22.ltl  philo5v1-23.ltl  philo5v1-24.ltl  philo5v1-25.ltl  philo5v1-26.ltl  philo5v1-27.ltl  philo5v1-28.ltl  philo5v1-29.ltl  philo5v1-30.ltl
Formulas/Robot/Module1/: Robot1.ltl  Robot10.ltl  Robot2.ltl  Robot3.ltl  Robot4.ltl  Robot5.ltl  Robot6.ltl  Robot7.ltl  Robot9.ltl
Formulas/Robot/Module2/: Robot11.ltl  Robot12.ltl  Robot13.ltl  Robot15.ltl  Robot16.ltl  Robot17.ltl  Robot18.ltl  Robot19.ltl  Robot20.ltl
Formulas/Robot/Module3/: Robot21.ltl  Robot22.ltl  Robot23.ltl  Robot24.ltl  Robot25.ltl  Robot26.ltl  Robot27.ltl  Robot28.ltl  Robot29.ltl  Robot30.ltl
Models/ERK/ERK1/: ERK1.pn  ERK1.pnml
Models/ERK/ERK10/: ERK10.pnml
Models/ERK/ERK100/: ERK100.pnml
Models/Philo/Philo10/: Philo10.pn
Models/Philo/Philo3/: Philo3.pn
Models/Philo/Philo5/: Philo5.pn  philo5v1.pn
Models/Philo/philo20/: philo20.pn
Models/Robot/Robot1/: Robot1.pn
Models/Robot/Robot10/: Robot10.pn  Robot10.pnml
Models/Robot/Robot5/: Robot5.pn  Robot5.pnml
Models/spool/spool1/: spool1.pn  spool1v1.pn  spool1v2.pn
samples/: AGV.pn  AGV_10modules.pn  AGV_9modules.pn  DistributedStateSpace  dini.pn  dini2.pn  dini3.pn  dini3_simple.pn  dini_bloc.pn  dini_bloc2.pn  dini_bloc_notworking.pn  dining.pn  dinningi.pn  exemple.pn  lecteurs_ecrivains.pn  mysample_3mod.pn  new_structure_dining.pn  philo.pn  philo3.pn  philo4.pn  philo4_1.pn  philo4_2.pn  philo4_new.pn  philo5_2.pn  philo6.pn  philo6_new.pn  philo7_2.pn  philo8.pn  philo8_2.pn  philo9_1.pn  protocole.pn  protocole_1.pn  protocole_2_premiers_mod.pn  protocole_2_premiers_mod_1.pn  protocole_3_new.pn  protocole_3mod.pn  protocole_5.pn  protocole_simple.pn  protocole_simple2.pn  protocole_test_2.pn  (+6 more)
src/: Arc.cpp  Arc.h  ArcSG.cpp  ArcSG.h  ArcSync.cpp  ArcSync.h  Automata.cpp  Automata.h  BaseBuilder.cpp  BaseBuilder.h  BaseMPNet.cpp  BaseMPNet.h  CMakeLists.txt  ConstructPetriFromFile.cpp  ConstructPetriFromFile.h  CycleElement.cpp  DisplaySummary.cpp  DisplaySummary.h  DistributedState.cpp  DistributedState.h  Element.cpp  Element.h  ElementPhase1.cpp  ElementPhase1.h  ElementRed.cpp  ElementRed.h  Element_dss.cpp  Element_dss.h  Fils.cpp  Fils.h  Fusion.cpp  Fusion.h  Graphe.cpp  Graphe.h  GrapheSync.cpp  GrapheSync.h  IntCycleElement.h  IntNode.cpp  IntNode.h  InternalArc.cpp  (+53 more)
src/DSS/: DSSBuilder.cpp  DSSBuilder.h  Marking.cpp  Marking.h  MarkingArray.cpp  MarkingArray.h  MetaGraph.cpp  MetaGraph.h  MetaState.cpp  MetaState.h  ModuleSS.cpp  ModuleSS.h  SCC.cpp  SCC.h  StateGraph.cpp  StateGraph.h
src/SpotMC/: DSSIterator.cpp  DSSIterator.h  DSSKripke.cpp  DSSKripke.h  DSSState.cpp  DSSState.h  ParseFormulaFile.cpp  ParseFormulaFile.h
